# python-flask-api/swagger_server/controllers/info_controller.py
@@ -1,0 +1,17 @@
+import connexion
+import six
+
+from swagger_server import util
+
+
+def get_info(alias):  # noqa: E501
+    """Returns measurement data from an outlet.
+
+    d # noqa: E501
+
+    :param alias: outlet alias
+    :type alias: str
+
+    :rtype: bool
+    """
+    return 'do some magic!'
