# python-flask-api/swagger_server/controllers/list_controller.py
@@ -1,0 +1,16 @@
+import connexion
+import six
+
+from swagger_server.models.outlet import Outlet  # noqa: E501
+from swagger_server import util
+
+
+def list_outlets():  # noqa: E501
+    """Returns a list of all outlets.
+
+    d # noqa: E501
+
+
+    :rtype: List[Outlet]
+    """
+    return 'do some magic!'
