# python-flask-api/swagger_server/controllers/power_on_controller.py
@@ -1,0 +1,17 @@
+import connexion
+import six
+
+from swagger_server import util
+
+
+def power_on(alias):  # noqa: E501
+    """turns on an outlet.
+
+    d # noqa: E501
+
+    :param alias: outlet alias
+    :type alias: str
+
+    :rtype: bool
+    """
+    return 'do some magic!'
